<resources>
    <string name="app_name">MokletBK</string>
    <string name="title_activity_main">Menu MokletBK</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">SIAP!</string>

    <string name="slide_1_title">Selamat datang di MokletBK!</string>
    <string name="slide_1_desc">MokletBK adalah aplikasi yang dirancang untuk bimbingan konseling SMK Telkom Malang.</string>

    <string name="slide_2_title">Laporkan Masalah Pribadi Anda</string>
    <string name="slide_2_desc">Ingin curhat dengan guru BK? Punya pertanyaan pribadi? Cukup laporkan dan tulis rincian laporan!</string>

    <string name="slide_3_title">Periksa Status Laporan</string>
    <string name="slide_3_desc">Merasa pernah melaporkan suatu hal sebelumnya? Ingin tahu tanggapan guru BK langsung dari aplikasi? Tersedia fitur periksa laporan.</string>

    <string name="slide_4_title">Gunakan MokletBK sekarang!</string>
    <string name="slide_4_desc">Tunggu apa lagi? Mulailah menggunakan MokletBK sekarang!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="navigation_drawer_open">Buka navigasi</string>
    <string name="navigation_drawer_close">Tutup navigasi</string>

    <string name="action_settings">Pengaturan</string>
    <string name="title_activity_login">Masuk</string>
    <string name="action_save">Simpan Data</string>

    <string name="name">Nama</string>
    <string name="kelas">Kelas</string>
    <string name="change_profile">Ubah profil</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password terlalu pendek, minimal 6 karakter</string>
    <string name="auth_failed">Autentifikasi gagal, mohon periksa kolom email dan password atau daftar terlebih dahulu</string>
    <string name="change_email">Ubah Email</string>
    <string name="change_password">Ubah Password</string>
    <string name="send_password_reset_email">Kirim email pengubah password</string>
    <string name="remove_user">Hapus pengguna</string>
    <string name="new_pass">Password Baru</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Nama Lengkap</string>
    <string name="btn_login">MASUK</string>
    <string name="btn_link_to_register">Bukan anggota? Daftar sekarang juga</string>
    <string name="btn_link_to_login">Buka ini bila Anda sudah terdaftar sebelumnya</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Lupa password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Kembali]]></string>
    <string name="hint_new_email">Email Baru</string>
    <string name="btn_change">Ubah</string>
    <string name="btn_send">Kirim</string>
    <string name="btn_remove">Hapus</string>
    <string name="btn_sign_out">Keluar</string>
    <string name="lbl_forgot_password">Lupa password?</string>
    <string name="forgot_password_msg">Kami hanya membutuhkan email anda yang telah terdaftar untuk mengirim instruksi pengubahan password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
